# libraqm

./: .appveyor.yml  .travis.yml  README  annotation-glossary.html  api-index-0-1.html  api-index-0-2.html  api-index-0-3.html  api-index-0-6.html  api-index-0-7.html  api-index-full.html  index.html  meson.build  raqm-Raqm.html  raqm.devhelp2
example/: README.md  compile.sh  test  test.c
example/make/: .gitignore  CMakeLists.txt  compile.sh
example/make/src/: main.cpp
src/: raqm.c
tests/: runtest.py
